--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,35 @@
 header {
   width: 100%;
+  height: 50px;
   background-color: green;
   color: white;
+}
+
+.icon {
+  height: 40px;
+  width: 40px;
+  padding: 5px;
+  display: inline;
+  float: left;
+}
+
+header nav ul {
+  color: black;
+  font-size: small;
+  padding: 5px;
+}
+
+header nav ul li {
+  margin: 5px;
+  text-decoration: none;
+  display: inline;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.float-right {
+  float: right;
 }
